workshop04/weather-svc.yaml
---
apiVersion: v1
kind: Service

metadata:
  name: weather-svc
  labels:
    name: weather-svc
    version: v1

spec:
  selector:
    name: weather-pod
    version: v1
  type: ClusterIP
  ports:
  - name: weather-svc-port
    port: 80
    targetPort: weather-port
