workshop04/fortune-gw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway

metadata:
  name: fortune-ingress

spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - "fortune.157.230.195.235.nip.io"
    - "weather.157.230.195.235.nip.io"
    port:
      number: 80
      name: http
      protocol: HTTP
