workshop04/fortune-vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService

metadata:
  name: fortune-ingress-vs

spec:
  hosts:
  - "*"
  gateways:
  - fortune-ingress.default.svc.cluster.local
  http:
  - match:
    - uri:
        exact: /random
    rewrite:
      uri: /
    route:
    - destination:
        host: fortuneapp-svc.default.svc.cluster.local
        port:
          number: 80
      weight: 70
    - destination:
        host: appv1-svc.default.svc.cluster.local
        port:
          number: 80
      weight: 30
