workshop04/weather-svc-entry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry

metadata:
  name: weather-egress

spec:
  hosts:
  - hacker-news.firebaseio.com
  - api.openweathermap.org
  ports:
  - number: 80
    protocol: HTTP
    name: http
  - number: 443
    protocol: HTTPS
    name: https
  location: MESH_EXTERNAL
  resolution: DNS
