workshop04/weather-vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService

metadata:
  name: weather-ingress-vs

spec:
  hosts:
  - "*"
  gateways:
  - fortune-ingress.default.svc.cluster.local
  http:
  - match:
    - uri:
        prefix: /
    #rewrite:
    #  uri: " "
    route:
    - destination:
        host: weather-svc.default.svc.cluster.local
        port:
          number: 80
